# alexcolls

./: .env.sample  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: update-barcelona-widget.yml  update-carousel.yml
github-widget-service/: .env.sample  .gitignore  GITHUB_CACHE_SOLUTION.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
github-widget-service/tests/: __init__.py  test_widget.py
scripts/: gen-gif.sh
