[tool.poetry]
name = "github-widget-service"
version = "0.1.0"
description = "Dynamic SVG widget service for GitHub profile with live Barcelona time and weather"
authors = ["Alex Colls <alexcollsoutumuro@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alexcolls/alexcolls"
keywords = ["github", "widget", "svg", "weather", "flask"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
requests = "^2.32.3"
pytz = "^2024.2"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-flask = "^1.3.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
